src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-345.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incvb=2:59\")"
---
items:
  - loc: "#units incvb=2:59"
    locs:
      directive: "#units"
    options:
      - correction:
          degrees: 2
          locs:
            degrees: "2"
            minutes: "59"
          minutes: 59
          unit: Degrees
          value: 2.9833333333333334
        loc: "incvb=2:59"
        locs:
          correction: "2:59"
          option: incvb
        option: BacksightInclinationCorrection
    type: UnitsDirective
