src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-348.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incvb=2:3:5.2\")"
---
items:
  - loc: "#units incvb=2:3:5.2"
    locs:
      directive: "#units"
    options:
      - correction:
          degrees: 2
          locs:
            degrees: "2"
            minutes: "3"
            seconds: "5.2"
          minutes: 3
          seconds: 5.2
          unit: Degrees
          value: 2.0514444444444444
        loc: "incvb=2:3:5.2"
        locs:
          correction: "2:3:5.2"
          option: incvb
        option: BacksightInclinationCorrection
    type: UnitsDirective
