src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-35.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units d=feet\")"
---
items:
  - loc: "#units d=feet"
    locs:
      directive: "#units"
    options:
      - loc: d=feet
        locs:
          option: d
          unit: feet
        option: PrimaryDistanceUnit
        unit: Feet
    type: UnitsDirective
