src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-351.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incvb=90\")"
---
items:
  - loc: "#units incvb=90"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Degrees
          value: 90
        loc: incvb=90
        locs:
          correction: "90"
          option: incvb
        option: BacksightInclinationCorrection
    type: UnitsDirective
