src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-353.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incvb=90:00:01\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incvb=90:00:01"
        locs:
          directive: "#units"
        options:
          - INVALID:
              correction: "90:00:01"
              loc: "incvb=90:00:01"
              locs:
                correction: "90:00:01"
                option: incvb
              option: BacksightInclinationCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EINCLINATIONOUTOFRANGE
    loc: "90:00:01"
    message: Inclination out of range
    severity: Error
